--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --soft-black: #121212;
+}
+
 body {
   font-family: 'Noto Sans KR', sans-serif;
+  text-align: center;
 }
